dbus (0.50-2) experimental; urgency=low

  * maintainance is actually spelled "maintenance" (Closes: #332238)
  * Disable --enable-verbose because of the big performance hit
  * Move dbus-launch and dbus-send into the dbus package
  * Move dbus-binding-tool from dbus-1-utils to libdbus-glib-1-dev
  * Add reload function to the init script
  * Use log_daemon_msg instead of log_begin_msg in the init script where
    applicable
  * debian/patches/dbus-reloadconfig-reply.patch
    + Added. Send a reply message when org.freedesktop.DBus.ReloadConfig is
      called

 -- Sjoerd Simons <sjoerd@debian.org>  Wed,  2 Nov 2005 21:46:29 +0100

dbus (0.50-1) experimental; urgency=low

  * New upstream release 

 -- Sjoerd Simons <sjoerd@debian.org>  Thu,  8 Sep 2005 10:01:21 +0200

dbus (0.36.2-1) experimental; urgency=low

  * New upstream release
  * Fix descriptions to refer to dbus rather than dbus-1. 
  * Make dbus-1-utils depend on dbus
  * debian/patches/dbus-sessionbus-checkuid.patch
    + Removed. Fixed upstream

 -- Sjoerd Simons <sjoerd@debian.org>  Tue,  6 Sep 2005 09:26:19 +0200

dbus (0.36.1-1) experimental; urgency=low

  * New upstream release (Closes: #319593, #324016)
  * debian/patches/dbus_cmsgcred.patch
    + Removed. Fixed upstream.
  * debian/patches/dbus-gilstate.patch
    + Removed. Fixed upstream.
  * Sync with the ubuntu package
    + Remove dbus_bindings.{a,la} from python2.4-dbus
    + debian/patches/dbus-make-libtool-safe.patch
      - Added. Replace explicit libtool calls with $(LIBTOOL) in
        glib/Makefile.*
    + Don't include the .la files in the dev packages.
    + Don't restart dbus on upgrade. Too many applications don't handle it
      correctly.
    + Switched the init script to lsb-base
    + Ship dbus-binding-tool and dbus-viewer with dbus-1-utils

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 26 Aug 2005 21:58:42 +0200

dbus (0.34-4) experimental; urgency=low

  * libdbus-1-cil improvements based on comments from Mirco Bauer