@@ -3,6 +3,7 @@ dbus (0.50-2) experimental; urgency=low
   * maintainance is actually spelled "maintenance" (Closes: #332238)
   * Disable --enable-verbose because of the big performance hit
   * Move dbus-launch and dbus-send into the dbus package
+  * Move the /etc/X11/Xsession.d/ script from dbus-1-utils to dbus
   * Move dbus-binding-tool from dbus-1-utils to libdbus-glib-1-dev
   * Add reload function to the init script
   * Use log_daemon_msg instead of log_begin_msg in the init script where
@@ -11,7 +12,7 @@ dbus (0.50-2) experimental; urgency=low
     + Added. Send a reply message when org.freedesktop.DBus.ReloadConfig is
       called
 
- -- Sjoerd Simons <sjoerd@debian.org>  Wed,  2 Nov 2005 21:46:29 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Wed,  2 Nov 2005 21:52:11 +0100
 
 dbus (0.50-1) experimental; urgency=low
 
